# entropy_benchmarking

./: .gitignore  README.md  pyproject.toml  requirements.txt
simulation/qctip2026/heisenberg/8-qubit/: run_classical.py  run_pec.pkl  run_pec.py  run_raw.pkl  run_raw.py  run_theoretical.pkl  run_theoretical.py  setting.py  visualise_pec-wins.py  visualise_pec.py  visualise_raw.py
simulation/qctip2026/heisenberg/8-qubit/E_mid_eq_E_0/: run_classical.pkl  run_pec.pkl  run_pec.py  run_raw.pkl  run_raw.py  run_raw_pec.pkl  run_raw_pec.py  setting.py  visualise_pec-wins.py  visualise_pec.py  visualise_raw.py
src/entropy_benchmarking/: backend_postprocessing.py  backend_preprocessing.py  circuits_1d_path.py  circuits_1d_ring.py  circuits_1d_util.py  circuits_kagome_ring.py  circuits_nnn_path.py  circuits_nnn_ring.py  circuits_nnn_util.py  circuits_util.py  distribution.py  hamiltonian.py  magnitisation.py
