[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "entropy_benchmarking"
version = "0.1.0"
description = "Entropy benchmarking with finite shot count"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Bo Yang", email = "bo.yang@inria.fr" },
    { name = "Pauline Besserve" },
    { name = "Raul Garcia-Patron Sanchez" }
]

maintainers = [
    { name = "Bo Yang", email = "bo.yang@inria.fr" }
]


license = { text = "Apache-2.0" }

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
]

keywords = [
    "quantum simulation",
    "quantum computing",
    "quantum dynamics",
]

dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# entropy_benchmarking = ["data/*.npy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
